Added Home page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,23 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./Logo-2.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./Logo-2.ico" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- <link rel="icon" href="/frontend/src/logo.svg  type= "image/ico"> -->
     <title>Siddharte Arte</title>
+
+    <link rel="icon" href="./Logo-2.ico" type="./Logo-2.ico">
+
+
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@100;300;500&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-  </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@100;300;500&family=Rubik+Mono+One&family=Vollkorn&display=swap" rel="stylesheet">  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Poppins:wght@100;300;500&family=Rubik+Mono+One&family=Vollkorn&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Poppins:wght@100;300;500&family=Rubik+Mono+One&family=Tilt+Neon&family=Vollkorn&display=swap" rel="stylesheet">
+
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
